# raptor-sparse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_par_block_spmv.cpp  benchmark_par_spmv.cpp  benchmark_par_spmv_timing_mod.cpp  benchmark_spmv.cpp
src/: CMakeLists.txt  raptor-sparse.hpp
src/core/: .matrix.hpp.swp  matrix.cpp  par_matrix.hpp  types.hpp
src/core/tests/: CMakeLists.txt  test_bsr_matrix.cpp  test_matrix.cpp  test_par_block_conversion.cpp  test_par_block_matrix.cpp  test_par_comm.cpp  test_par_matrix.cpp  test_par_transpose.cpp  test_par_vector.cpp  test_tap_comm.cpp  test_transpose.cpp
src/gallery/: diffusion.hpp  laplacian27pt.hpp  matrix_IO.hpp  matrix_market.hpp  par_matrix_IO.hpp  par_matrix_market.cpp  par_matrix_market.hpp  par_random.hpp  par_stencil.hpp  random.hpp  stencil.hpp
src/gallery/tests/: CMakeLists.txt  test_aniso.cpp  test_laplacian.cpp  test_matrix_market.cpp  test_par_aniso.cpp  test_par_laplacian.cpp  test_par_matrix_market.cpp  test_stencil.cpp
src/tests/: compare.hpp  par_compare.hpp  sas_P0_out.mtx
src/timing/: BasicPerformanceModel.h  CMakeLists.txt  NodeAwareModel.h  partitioning_timing.h
src/util/linalg/: .relax.cpp.swp  .relax.hpp.swp  CMakeLists.txt  add.cpp  matmult.cpp  par_add.cpp  par_matmult.cpp  par_spmv.cpp  repartition.hpp  spmv.cpp
src/util/tests/: .test_bsr_gs_aniso.cpp.swp  .test_bsr_gs_laplacian.cpp.swp  .test_bsr_jacobi_aniso.cpp.swp  .test_bsr_jacobi_laplacian.cpp.swp  CMakeLists.txt  test_bsr_spmv_aniso.cpp  test_bsr_spmv_laplacian.cpp  test_bsr_spmv_random.cpp  test_par_add.cpp  test_par_spmv_aniso.cpp  test_par_spmv_laplacian.cpp  test_par_spmv_random.cpp  test_parmetis.cpp  test_ptscotch.cpp  test_repartition.cpp  test_spmv_aniso.cpp  test_spmv_laplacian.cpp  test_spmv_random.cpp  test_tap_spmv_aniso.cpp  test_tap_spmv_laplacian.cpp  test_tap_spmv_random.cpp
