if (WITH_MPI)
    add_executable(test_par_comm test_par_comm.cpp)
    target_link_libraries(test_par_comm raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParCommTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_comm)
    add_test(ParCommTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_comm)
    add_test(ParCommTest8 ${MPIRUN} -n 8 ${HOST} ./test_par_comm)

    add_executable(test_tap_comm test_tap_comm.cpp)
    target_link_libraries(test_tap_comm raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(TAPCommTest1 ${MPIRUN} -n 1 ${HOST} ./test_tap_comm)
    add_test(TAPCommTest4 ${MPIRUN} -n 4 ${HOST} ./test_tap_comm)
    add_test(TAPCommTest8 ${MPIRUN} -n 8 ${HOST} ./test_tap_comm)

    add_executable(test_par_matrix test_par_matrix.cpp)
    target_link_libraries(test_par_matrix raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParMatrixTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_matrix)
    add_test(ParMatrixTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_matrix)
    add_test(ParMatrixTest8 ${MPIRUN} -n 8 ${HOST} ./test_par_matrix)

    add_executable(test_par_vector test_par_vector.cpp)
    target_link_libraries(test_par_vector raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParVectorTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_vector)
    add_test(ParVectorTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_vector)
    add_test(ParVectorTest8 ${MPIRUN} -n 8 ${HOST} ./test_par_vector)

    add_executable(test_par_transpose test_par_transpose.cpp)
    target_link_libraries(test_par_transpose raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParTransposeTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_transpose)
    add_test(ParTransposeTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_transpose)
    add_test(ParTransposeTest8 ${MPIRUN} -n 8 ${HOST} ./test_par_transpose)
        
    add_executable(test_par_block_matrix test_par_block_matrix.cpp)
    target_link_libraries(test_par_block_matrix raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBlockMatrixTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_block_matrix)
    add_test(ParBlockMatrixTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_block_matrix)
    add_test(ParBlockMatrixTest8 ${MPIRUN} -n 8 ${HOST} ./test_par_block_matrix)
    
    add_executable(test_par_block_conversion test_par_block_conversion.cpp)
    target_link_libraries(test_par_block_conversion raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParBlockConversionTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_block_conversion)
    add_test(ParBlockConversionTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_block_conversion)
    add_test(ParBlockConversionTest8 ${MPIRUN} -n 8 ${HOST} ./test_par_block_conversion)

endif ()

add_executable(test_matrix test_matrix.cpp)
target_link_libraries(test_matrix raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(MatrixTest ./test_matrix)

add_executable(test_transpose test_transpose.cpp)
target_link_libraries(test_transpose raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(TransposeTest ./test_transpose)

add_executable(test_bsr_matrix test_bsr_matrix.cpp)
target_link_libraries(test_bsr_matrix raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(BSRMatrixTest ./test_bsr_matrix)
