add_executable(test_spmv_laplacian test_spmv_laplacian.cpp)
target_link_libraries(test_spmv_laplacian raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(LaplacianSpMVTest ./test_spmv_laplacian)

add_executable(test_spmv_aniso test_spmv_aniso.cpp)
target_link_libraries(test_spmv_aniso raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(AnisoSpMVTest ./test_spmv_aniso)

add_executable(test_spmv_random test_spmv_random.cpp)
target_link_libraries(test_spmv_random raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(RandomSpMVTest ./test_spmv_random)

add_executable(test_bsr_spmv_laplacian test_bsr_spmv_laplacian.cpp)
target_link_libraries(test_bsr_spmv_laplacian raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(BSRLaplacianSpMVTest ./test_bsr_spmv_laplacian)

add_executable(test_bsr_spmv_aniso test_bsr_spmv_aniso.cpp)
target_link_libraries(test_bsr_spmv_aniso raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(BSRAnisoSpMVTest ./test_bsr_spmv_aniso)

add_executable(test_bsr_spmv_random test_bsr_spmv_random.cpp)
target_link_libraries(test_bsr_spmv_random raptor-sparse ${MPI_LIBRARIES} googletest pthread )
add_test(BSRRandomSpMVTest ./test_bsr_spmv_random)

if (WITH_MPI)
    add_executable(test_par_add test_par_add.cpp)
    target_link_libraries(test_par_add raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParAddTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_add)
    add_test(ParAddTest16 ${MPIRUN} -n 16 ${HOST} ./test_par_add)

    add_executable(test_par_spmv_laplacian test_par_spmv_laplacian.cpp)
    target_link_libraries(test_par_spmv_laplacian raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParLaplacianSpMVTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_spmv_laplacian)
    add_test(ParLaplacianSpMVTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_spmv_laplacian)
    add_test(ParLaplacianSpMVTest16 ${MPIRUN} -n 16 ${HOST} ./test_par_spmv_laplacian)

    add_executable(test_par_spmv_aniso test_par_spmv_aniso.cpp)
    target_link_libraries(test_par_spmv_aniso raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(ParAnisoSpMVTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_spmv_aniso)
    add_test(ParAnisoSpMVTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_spmv_aniso)
    add_test(ParAnisoSpMVTest16 ${MPIRUN} -n 16 ${HOST} ./test_par_spmv_aniso)

    add_executable(test_par_spmv_random test_par_spmv_random.cpp)
    target_link_libraries(test_par_spmv_random ${MPI_LIBRARIES} raptor-sparse googletest pthread )
    add_test(ParRandomSpMVTest1 ${MPIRUN} -n 1 ${HOST} ./test_par_spmv_random)
    add_test(ParRandomSpMVTest4 ${MPIRUN} -n 4 ${HOST} ./test_par_spmv_random)
    add_test(ParRandomSpMVTest16 ${MPIRUN} -n 16 ${HOST} ./test_par_spmv_random)
    
    add_executable(test_tap_spmv_laplacian test_tap_spmv_laplacian.cpp)
    target_link_libraries(test_tap_spmv_laplacian raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(TAPLaplacianSpMVTest1 ${MPIRUN} -n 1 ${HOST} ./test_tap_spmv_laplacian)
    add_test(TAPLaplacianSpMVTest4 ${MPIRUN} -n 4 ${HOST} ./test_tap_spmv_laplacian)
    add_test(TAPLaplacianSpMVTest8 ${MPIRUN} -n 8 ${HOST} ./test_tap_spmv_laplacian)
    add_test(TAPLaplacianSpMVTest16 ${MPIRUN} -n 16 ${HOST} ./test_tap_spmv_laplacian)

    add_executable(test_tap_spmv_aniso test_tap_spmv_aniso.cpp)
    target_link_libraries(test_tap_spmv_aniso raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(TAPAnisoSpMVTest1 ${MPIRUN} -n 1 ${HOST} ./test_tap_spmv_aniso)
    add_test(TAPAnisoSpMVTest4 ${MPIRUN} -n 4 ${HOST} ./test_tap_spmv_aniso)
    add_test(TAPAnisoSpMVTest8 ${MPIRUN} -n 8 ${HOST} ./test_tap_spmv_aniso)
    add_test(TAPAnisoSpMVTest16 ${MPIRUN} -n 16 ${HOST} ./test_tap_spmv_aniso)

    add_executable(test_tap_spmv_random test_tap_spmv_random.cpp)
    target_link_libraries(test_tap_spmv_random ${MPI_LIBRARIES} raptor-sparse googletest pthread )
    add_test(TAPRandomSpMVTest1 ${MPIRUN} -n 1 ${HOST} ./test_tap_spmv_random)
    add_test(TAPRandomSpMVTest4 ${MPIRUN} -n 4 ${HOST} ./test_tap_spmv_random)
    add_test(TAPRandomSpMVTest8 ${MPIRUN} -n 8 ${HOST} ./test_tap_spmv_random)

    add_executable(test_repartition test_repartition.cpp)
    target_link_libraries(test_repartition raptor-sparse ${MPI_LIBRARIES} googletest pthread )
    add_test(RepartitionTest1 ${MPIRUN} -n 1 ${HOST} ./test_repartition)
    add_test(RepartitionTest2 ${MPIRUN} -n 2 ${HOST} ./test_repartition)
    add_test(RepartitionTest3 ${MPIRUN} -n 3 ${HOST} ./test_repartition)
    add_test(RepartitionTest6 ${MPIRUN} -n 6 ${HOST} ./test_repartition)
    add_test(RepartitionTest16 ${MPIRUN} -n 16 ${HOST} ./test_repartition)

    if (WITH_PTSCOTCH)
        add_executable(test_ptscotch test_ptscotch.cpp)
        target_link_libraries(test_ptscotch raptor-sparse ${MPI_LIBRARIES} googletest pthread )
        add_test(PTScotchTest1 ${MPIRUN} -n 1 ${HOST} ./test_ptscotch)
        add_test(PTScotchTest2 ${MPIRUN} -n 2 ${HOST} ./test_ptscotch)
        add_test(PTScotchTest3 ${MPIRUN} -n 3 ${HOST} ./test_ptscotch)
        add_test(PTScotchTest6 ${MPIRUN} -n 6 ${HOST} ./test_ptscotch)
    endif()

    if (WITH_PARMETIS)
        add_executable(test_parmetis test_parmetis.cpp)
        target_link_libraries(test_parmetis raptor-sparse ${MPI_LIBRARIES} googletest pthread )
        add_test(ParMetisTest1 ${MPIRUN} -n 1 ${HOST} ./test_parmetis)
        add_test(ParMetisTest2 ${MPIRUN} -n 2 ${HOST} ./test_parmetis)
        add_test(ParMetisTest3 ${MPIRUN} -n 3 ${HOST} ./test_parmetis)
        add_test(ParMetisTest6 ${MPIRUN} -n 6 ${HOST} ./test_parmetis)
    endif()
endif()
